Implemented the Board class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ elseif(UNIX)
 endif()
 include(Config/dependencies.cmake)
 include_directories(${SLITHER_INCLUDE_PATH})
-include_directories(${SDL_INCLUDE_PATH})
+include_directories(SYSTEM ${SDL_INCLUDE_PATH})
 set(TEST_INSTALL_DIRECTORY "${PROJECT_BINARY_DIR}/Tests")
 set(LIB_INSTALL_DIRECTORY "${PROJECT_BINARY_DIR}/Libraries")
 if(MSVC)
@@ -53,13 +53,15 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "SunOS")
   set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_RELEASE} -pthreads")
 endif()
 file(GLOB slither_header_files ${SLITHER_INCLUDE_PATH}/Slither/*.hpp)
-source_group("Slither" FILES ${slither_header_files})
-file(GLOB header_files ${slither_header_files})
+file(GLOB slither_source_files ${SLITHER_SOURCE_PATH}/*.cpp)
+source_group("Slither\\Header Files" FILES ${slither_header_files})
+source_group("Slither\\Source Files" FILES ${slither_source_files})
 if(MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 endif()
-add_library(slither ${header_files})
-set_source_files_properties(${header_files} PROPERTIES HEADER_FILE_ONLY TRUE)
+add_library(slither ${slither_header_files} ${slither_source_files})
+set_source_files_properties(
+  ${slither_header_files} PROPERTIES HEADER_FILE_ONLY TRUE)
 set_target_properties(slither PROPERTIES STATIC_LIBRARY_FLAGS_RELEASE
   "${CMAKE_LIBRARY_FLAGS}" LINKER_LANGUAGE CXX OUTPUT_NAME slither)
 add_subdirectory(Config/Tests)
