Implemented the renderer.

--- a/Applications/Scratch/CMakeLists.txt
+++ b/Applications/Scratch/CMakeLists.txt
@@ -24,8 +24,6 @@ include_directories(${FREETYPE_INCLUDE_PATH})
 include_directories(${GLEW_INCLUDE_PATH})
 include_directories(${SDL_INCLUDE_PATH})
 include_directories(${SDL_TTF_INCLUDE_PATH})
-link_directories(${BOOST_DEBUG_PATH})
-link_directories(${BOOST_OPTIMIZED_PATH})
 add_definitions(-DCL_TARGET_OPENCL_VERSION=300)
 add_definitions(-DBOOST_COMPUTE_USE_CPP11)
 add_definitions(-DGLEW_STATIC)
@@ -73,7 +71,9 @@ target_link_libraries(Scratch
   debug ${SDL_LIBRARY_DEBUG_PATH}
   optimized ${SDL_LIBRARY_OPTIMIZED_PATH}
   debug ${SDL_TTF_LIBRARY_DEBUG_PATH}
-  optimized ${SDL_TTF_LIBRARY_OPTIMIZED_PATH})
+  optimized ${SDL_TTF_LIBRARY_OPTIMIZED_PATH}
+  debug ${SLITHER_LIBRARY_DEBUG_PATH}
+  optimized ${SLITHER_LIBRARY_OPTIMIZED_PATH})
 if(WIN32)
   target_link_libraries(Scratch Imm32.lib opengl32.lib Setupapi.lib Version.lib
     winmm.lib)
